chore: revert change